--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-    <div class="app">
-
+    <div id="app">
+        <!--   <input type="range" name="size" id="size">
+        <label for="size">Size</label> -->
     </div>
 </body>
 
