--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <label for="size">Size:</label>
         <input type="range" name="size" id="size" min="8" max="64" step="8" value="16">
         <p class="range-value"></p>
+        <div class="colorwheel">
+            <label for="color">Color:</label>
+            <input type="color" name="color" id="color" class="color">
+        </div>
     </div>
 </body>
 
