--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <div class="container">
         <div class="entry__point">
-            <h2>Entry Point</h2>
+
         </div>
         <div class="buttons">
             <label for="size">Size:</label>
@@ -34,6 +34,7 @@
             <input type="button" value="option2" class="option2">
         </div>
     </div>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
