--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="buttons">
             <label for="size">Size:</label>
-            <input type="range" name="size" id="size" min="8" max="64" step="8" value="16">
+            <input type="range" name="size" id="size" class="range" min="16" max="64" step="16" value="16">
             <p class="range-value">Value: </p>
         </div>
         <div class="colorwheel">
