--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
-    <!--  <script type="module" src="js/app.js" defer></script> -->
 </head>
 
 <body>
@@ -30,8 +29,8 @@
         <div class="colorwheel">
             <label for="color">Color:</label>
             <input type="color" name="color" id="color" class="color">
-            <input type="button" value="option1" class="option1">
-            <input type="button" value="option2" class="option2">
+            <input type="button" value="Reset" class="reset">
+            <input type="button" value="Random" class="random">
         </div>
     </div>
     <script src="js/app.js"></script>
