--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h1 class="title">Etch a Sketch with Javascript</h1>
+        <h1 class="title">Etch a Sketch in Javascript</h1>
     </header>
     <div class="container">
         <div class="entry__point">
@@ -24,13 +24,14 @@
         <div class="buttons">
             <label for="size">Size:</label>
             <input type="range" name="size" id="size" class="range" min="16" max="64" step="16" value="16">
-            <p class="range-value">Value: </p>
+            <p class="range-value">Value: 16 x 16</p>
         </div>
         <div class="colorwheel">
             <label for="color">Color:</label>
             <input type="color" name="color" id="color" class="color">
-            <input type="button" value="Reset" class="reset">
+            <input type="button" value="Clear" class="reset">
             <input type="button" value="Random" class="random">
+            <input type="button" value="Rainbow" class="rainbow">
         </div>
     </div>
     <script src="js/app.js"></script>
